Put the machinery in a separate file.
This is done with the intention of separating a bit things that
are Linux-dependant (syscall API, in do_syscall.*) from things
that are x86-64-dependant (syscall ABI, in syscall_handlers.*)

Besides function pointers are so cool.

git-svn-id: svn+ssh://svn-rsem001.cl.cam.ac.uk/ppcmem/system-call-plumbing@793 fd1e0feb-fba0-0410-91ae-b9d66fb37e41

--- a/linux-x86_64/Makefile
+++ b/linux-x86_64/Makefile
@@ -39,10 +39,10 @@ test-programs/hello-dynamic: test-programs/hello.c
 # NOW we are bound to take a breakpoint before any *more* executable mappings are created.
 # So we are a robust gatekeeper.
 
-trap-syscalls: trap-syscalls.c do_syscall.c restorer.o
+trap-syscalls: trap-syscalls.c do_syscall.c syscall_handlers.c restorer.o
 	$(CC) $(CFLAGS) -DEXECUTABLE -o "$@" $^ $(LDFLAGS) $(LDLIBS)
 
-trap-syscalls.so: trap-syscalls.c do_syscall.c restorer.o
+trap-syscalls.so: trap-syscalls.c do_syscall.c syscall_handlers.c restorer.o
 	$(CC) $(CFLAGS) -fPIC -shared -o "$@" $^ $(LDFLAGS) $(LDLIBS)
 
 test-programs:
