Some more syscall handlers.
git-svn-id: svn+ssh://svn-rsem001.cl.cam.ac.uk/ppcmem/system-call-plumbing@803 fd1e0feb-fba0-0410-91ae-b9d66fb37e41

--- a/linux-x86_64/Makefile
+++ b/linux-x86_64/Makefile
@@ -51,6 +51,10 @@ trap-syscalls.so: $(SRC) restorer.o
 test-programs:
 	mkdir -p test-programs
 
+test-programs/%: test-src/%.c test-programs
+	$(CC) -Wl,--export-dynamic -o $@ -nostartfiles -nostdlib -Bdynamic $< \
+		/lib64/ld-linux-x86-64.so.2
+
 test-programs/%: test-src/%.s test-programs
 	$(CC) -Wl,--export-dynamic -o $@ -nostartfiles -nostdlib -Bdynamic $< \
 		/lib64/ld-linux-x86-64.so.2
