syscall_copy_dsl
git-svn-id: svn+ssh://svn-rsem001.cl.cam.ac.uk/ppcmem/system-call-plumbing@960 fd1e0feb-fba0-0410-91ae-b9d66fb37e41

--- a/linux-x86_64/syscall_copy_dsl/Makefile
+++ b/linux-x86_64/syscall_copy_dsl/Makefile
@@ -4,7 +4,10 @@ all: main
 dsl: main
 	./main > dsl.h
 
-main: main.hs generators.hs parse.hs
+caml: main
+	./main > caml.ml
+
+main: main.hs generators.hs parse.hs gen_structs.hs parse_structs.hs
 	ghc --make $^ -Wall
 
 .PHONY: clean
