New (old) form of parsing.
git-svn-id: svn+ssh://svn-rsem001.cl.cam.ac.uk/ppcmem/system-call-plumbing@989 fd1e0feb-fba0-0410-91ae-b9d66fb37e41

--- a/linux-x86_64/parsing/Makefile
+++ b/linux-x86_64/parsing/Makefile
@@ -1,8 +1,11 @@
 all: main
-	./main
+	./main | head
+
+dsl: main
+	./main > dsl.h
 
 main: main.hs generators.hs parse.hs
-	ghc --make $^
+	ghc --make $^ -Wall
 
 .PHONY: clean
 
