Sorta coherent structure generation.
git-svn-id: svn+ssh://svn-rsem001.cl.cam.ac.uk/ppcmem/system-call-plumbing@993 fd1e0feb-fba0-0410-91ae-b9d66fb37e41

--- a/linux-x86_64/syscall-dsl/headers/Makefile
+++ b/linux-x86_64/syscall-dsl/headers/Makefile
@@ -1,7 +1,5 @@
-all: main
-
-gen: main
-	./main > headers.ml
+headers.ml: main
+	./main | indent > headers.ml
 
 main: main.hs generator.hs parser.hs
 	ghc --make $^ -Wall
