More small fixes. Now builds a working trap-syscalls.so once more, but via libsystrap.a.

--- a/libsystrap/Makefile
+++ b/libsystrap/Makefile
@@ -55,7 +55,7 @@ ifneq ($(MAKECMDGOALS),clean)
 -include $(DEPS)
 endif
 
-libsystrap.a: $(patsubst %.c,%.o,$(C_SRC))
+libsystrap.a: $(OBJS)
 	$(AR) r "$@" $^
 
 .PHONY: clean
