Bundle opdis and BFD stuff into libsystrap.a, to save clients having to build it (probably PIC) themselves.

--- a/libsystrap/Makefile
+++ b/libsystrap/Makefile
@@ -55,8 +55,16 @@ ifneq ($(MAKECMDGOALS),clean)
 -include $(DEPS)
 endif
 
+# Also extract 	$(LIBOPDIS_A), $(LIBOPCODES_A), $(LIBBFD_A) and $(LIBIBERTY_A),
+# and re-add their members to our archive.  This allows clients to link to us
+# without concern for these dependencies, which they probably don't have
+# available in PIC form.
 libsystrap.a: $(OBJS)
-	$(AR) r "$@" $^
+	objs_list=$$( for fname in $(LIBOPDIS_A) $(LIBOPCODES_A) $(LIBBFD_A) $(LIBIBERTY_A); do \
+		$(AR) vx "$$fname"; done | \
+		grep '^x - ' | sed 's/^x - //' | tee objs_list ); \
+	$(AR) r "$@" $^ $${objs_list}; \
+	rm -f $$objs_list
 
 .PHONY: clean
 clean:
