--- a/src/Makefile
+++ b/src/Makefile
@@ -39,7 +39,7 @@ $(CONTRIB)/config.mk:
 
 include $(CONFIG)
 
-CFLAGS += -DRELF_DEFINE_STRUCTURES
+CFLAGS += -DRELF_DEFINE_STRUCTURES -DSYSTRAP_DEFINE_FILE
 
 ifeq ($(LIBALLOCS_DIR),)
 $(error Please install the liballocs source tree and set LIBALLOCS_DIR)
