test/x86-decode: cross-check against libudis86.

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,4 +5,4 @@ default: hello true getpid time read write
 true getpid time read write: LDFLAGS += -Wl,-nostdlib -nostartfiles -ffreestanding
 
 x86-decode: CFLAGS += -I../libsystrap -std=gnu11
-x86-decode: LDLIBS += ../libsystrap/x86_decode.o
+x86-decode: LDLIBS += ../libsystrap/x86_decode.o -ludis86
