--- a/test/Makefile
+++ b/test/Makefile
@@ -6,3 +6,6 @@ true getpid time read write: LDFLAGS += -Wl,-nostdlib -nostartfiles -ffreestandi
 
 x86-decode: CFLAGS += -I../libsystrap -std=gnu11
 x86-decode: LDLIBS += ../libsystrap/x86_decode.o -ludis86
+
+x86-operands: LDLIBS += "-L../libsystrap -lsystrap" 
+x86-operands: CFLAGS += -I../libsystrap
