{contrib,libsystrap}/Makefile: clean up some cruft, and skip building the binutils/opdis-based decoder by default.

--- a/libsystrap/Makefile
+++ b/libsystrap/Makefile
@@ -5,7 +5,7 @@ THIS_MAKEFILE := $(lastword $(MAKEFILE_LIST))
 SRCROOT := $(realpath $(dir $(THIS_MAKEFILE)))/..
 
 CONTRIB := $(SRCROOT)/contrib
-CONFIG := $(CONTRIB)/config.mk
+CONFIG ?= $(CONTRIB)/config.mk
 
 $(CONTRIB)/config.mk:
 	$(MAKE) -C $(CONTRIB)
